[project]
name = "comfyui-aurasr"
description = "Custom nodes to run fal-ai/AuraSR model."
version = "4.0.1"
license = { text = "Apache License 2.0" }
dependencies = ["torch", "torchvision", "einops", "Pillow", "requests"]

[project.urls]
Repository = "https://github.com/alexisrolland/ComfyUI-AuraSR"

[tool.comfy]
PublisherId = "alexisrolland"
DisplayName = "ComfyUI-AuraSR"
Icon = "https://github.com/alexisrolland/ComfyUI-AuraSR/blob/main/iguana_1024.png?raw=true"
